--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 <li> <a href="Zadanie10_keler.html" target="strony">Zadanie 10</a>
 <li> <a href="Zadanie11_keler.html" target="strony">Zadanie 11</a>
 <li> <a href="Zadanie12_keler.html" target="strony">Zadanie 12</a>
+<li> <a href="Zadanie13_kele.html" target="strony">Zadanie 13</a>
+<li> <a href="Zadanie14_keler.html" target="strony">Zadanie 14</a>
+<li> <a href="Zadanie15_kele.html" target="strony">Zadanie 15 </a>
 </ul>
 </td>
 <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
@@ -34,6 +37,8 @@
 <li> <a href="kod_zadanie5_3_keler.html" target="strony">Z5-kod-wewnetrzny</a>
 <li> <a href="kod_zadanie5_4_keler.html" target="strony">Z5-kod-liniowy</a>
 <li> <a href="kod_zadanie6_keler.html" target="strony">Zadanie 6-kod</a>
+<li> <a href="kod_zadanie13_Keler.html" target="strony">Zadanie 13-kod</a>
+<li> <a href="kod_zadanie15_Keler.html" target="strony">Zadanie 15-kod</a>
 </td>
 </tr>
 </table>
