--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <li> <a href="kod_zadanie5_4_keler.html" target="strony">Z5-kod-liniowy</a>
 <li> <a href="kod_zadanie6_keler.html" target="strony">Zadanie 6-kod</a>
 <li> <a href="kod_zadanie13_Keler.html" target="strony">Zadanie 13-kod</a>
-<li> <a href="kod_zadanie15_Keler.html" target="strony">Zadanie 15-kod</a>
+<li> <a href="kod_zadanie15_keler.html" target="strony">Zadanie 15-kod</a>
 </td>
 </tr>
 </table>
