--- a/kod_zadanie6_keler.html
+++ b/kod_zadanie6_keler.html
@@ -9,7 +9,7 @@ HTML
 <head>
 <title>Zadanie 6</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<LINK href="karm_z6.css" rel="stylesheet" type="text/CSS" >
+<LINK href="kele_z6.css" rel="stylesheet" type="text/CSS" >
 </script></head>
 <body>
 :) - usmiech
