--- a/zadanie 36_keler.html
+++ b/zadanie 36_keler.html
@@ -16,10 +16,7 @@ div {
  }
 h1 {
  margin : 20px;
- border-right-style : inset;
- border-left-style : dotted;
- border-top-style : ridge;
-  border-bottom-style : double;
+ border : 2px dotted black;
  background : rgb(255,255,0);
  }
  h2 {
